# pluto-bank-api

./: .env.example  .gitignore  README.md  bank.db  makefile  pyproject.toml
alembic/: env.py
alembic/versions/: 7b648c1cb63e_transactions_decimal_and_created_at.py  aa6e39da035b_transactions_decimal_and_created_at.py  ebbbef38eb55_transactions_decimal_and_created_at.py
app/: main.py
app/controllers/: auth.py  health.py  transactions.py  user.py
app/core/: deps.py  security.py  settings.py
app/db/: database.py
app/models/: transaction.py  user.py
app/schemas/: auth.py  transactions.py  users.py
tests/: test_api.py
